# MaTech

./: .editorconfig  .gitignore  MaTech.asmdef  README.md
Audio/: Audio.Unity.cs  Audio.cs  AudioPlayer.cs  AudioPool.cs  AudioSample.Interface.cs  AudioSample.Play.cs  AudioSample.Static.cs  AudioSample.cs  MaAudio.asmdef  Preserve.cs  SampleSequencer.Private.cs  SampleSequencer.cs  SampleTrack.Interface.cs  SampleTrack.cs
Chart/: MaChart.asmdef
Common/: MaCommon.asmdef  Preserve.cs
Control/: KeyBinding.cs  MaControl.asmdef  MaInput.asmdef  PlayControl.cs  PlayInput.Control.cs  PlayInput.Finger.cs  PlayInput.Key.cs  PlayInput.KeyCodes.cs  PlayInput.Touch.cs  PlayInput.TouchArea.cs  PlayInput.cs  TouchAreaBase.cs  TouchAreaCircle.cs  TouchAreaFan.cs  TouchAreaPolygon.cs  TouchAreaRangeMapping.cs  TouchAreaRect.cs  TouchAreaUIRect.cs  TouchSurfaceBase.cs  TouchSurfaceRadial.cs  TouchSurfaceUIRect.cs
Control/NativeInput/Native~/: CMakeLists.txt  CMakeSettings.json  define.h
Control/NativeInput/Native~/Windows/: rawinput.cpp  rawinput.h
Gameplay/: ChartPlayer.Busy.cs  ChartPlayer.Carrier.Note.cs  ChartPlayer.Carrier.Object.cs  ChartPlayer.Carrier.Time.cs  ChartPlayer.Carrier.Units.cs  ChartPlayer.Carrier.cs  ChartPlayer.Control.cs  ChartPlayer.Graphic.cs  ChartPlayer.Input.FingerBuffer.cs  ChartPlayer.Input.cs  ChartPlayer.Replay.cs  ChartPlayer.ReplayRecorder.cs  ChartPlayer.Update.cs  ChartPlayer.cs  MaGameplay.asmdef  PlayInfo.cs  PlayTime.cs  Preserve.cs  ReplayFile.cs
Input/: MaInput.asmdef
Malody/: .gitignore
Play/: MaPlay.asmdef  PlayBehavior.cs  (+3 more)
(+205 files in other folders)
