cmake_minimum_required(VERSION 3.12...3.25)

project(NativeInput)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")

# include all source files in current dir, and all in CMAKE_SYSTEM_NAME dir

set(PLATFORM_DIR ${CMAKE_SYSTEM_NAME})
if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${PLATFORM_DIR}/")
    set(SOURCES_GLOB "${PLATFORM_DIR}/*.cpp" "${PLATFORM_DIR}/*.h")
endif()
set(SOURCES_GLOB ${SOURCES_GLOB} "*.cpp" "*.h")

file(GLOB SOURCES LIST_DIRECTORIES false CONFIGURE_DEPENDS ${SOURCES_GLOB})
add_library(${PROJECT_NAME} SHARED ${SOURCES})

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX d)

set(TARGET_BINARY_FILE "$<TARGET_FILE_NAME:${PROJECT_NAME}>")

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_BINARY_FILE}" "${CMAKE_CURRENT_SOURCE_DIR}/../"
    COMMAND echo Copying ${TARGET_BINARY_FILE} to ${CMAKE_CURRENT_SOURCE_DIR}/../)
